@@ -1,6 +1,7 @@
 package com.playmonumenta.libraryofsouls.bestiary.storage;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.Map;
@@ -236,7 +237,7 @@ public class BestiaryRedisStorage implements BestiaryStorage, Listener {
 		if (playerKills == null) {
 			/* TODO: Instead of throwing an exception, should force complete this on the main thread */
 			mLogger.severe("Attempted to get all killed mobs but bestiary data hasn't finished loading yet");
-			return Map.of();
+			return Collections.emptyMap();
 		}
 
 		final Map<SoulEntry, Integer> map = new HashMap<>();
